force-app/main/default/objects/DM_Shipment__c/DM_Shipment__c.object-meta.xml
<CustomObject>
    <label>Shipment</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Shipment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>