force-app/main/default/objects/DM_Shipment__c/fields/DM_Material__c.field-meta.xml
<CustomField>
    <fullName>DM_Material__c</fullName>
    <label>Material</label>
    <referenceTo>DM_Material__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>