force-app/main/default/objects/DM_Shipment__c/fields/DM_Quantity_Received__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_Received__c</fullName>
    <label>Quantity Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>