force-app/main/default/objects/DM_Shipment__c/fields/DM_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Receive_Date__c</fullName>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>