force-app/main/default/objects/DM_Shipment__c/fields/DM_Received_UOM__c.field-meta.xml
<CustomField>
    <fullName>DM_Received_UOM__c</fullName>
    <formula>TEXT( DM_Material__r.DM_Quantity_Unit_of_Measure__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received UOM</label>
    <type>Text</type>
</CustomField>