force-app/main/default/objects/DM_Shipment__c/fields/DM_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>DM_Storage_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Location</label>
    <referenceTo>DM_Storage__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>