force-app/main/default/objects/DM_Shipment__c/recordTypes/DM_Shipment_Received.recordType-meta.xml
<RecordType>
    <fullName>DM_Shipment_Received</fullName>
    <active>true</active>
    <description>Shipments for Materials received into Inventory</description>
    <label>Shipment Received</label>
</RecordType>